Commit: -New data model