@@ -9,6 +9,7 @@ import br.ufrj.cos.views.record.IoTDomainRecord;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
+import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Set;
@@ -22,150 +23,89 @@ public class TreeBuilder implements IoTDomainTreeBuilder, ArchitectureSolutionTr
 
     private TreeNode<Object> getRootTreeNode() {
         root = new TreeNode<>(null); // Create a root node
-
         return root;
     }
 
     public TreeNode<Object> setNodeAsRoot(List<?> list) {
         if (!list.isEmpty()) {
-
             root = this.getRootTreeNode();
 
-            if (list.getFirst() instanceof IoTDomain) {
+            if (list.get(0) instanceof IoTDomain) {
                 ((List<IoTDomain>) list).sort(Comparator.comparing(IoTDomain::getName));
                 for (IoTDomain domain : (List<IoTDomain>) list) {
                     root.addChild(buildTreeIoTDomain(domain));
                 }
-            } else if (list.getFirst() instanceof ArchitectureSolution) {
+            } else if (list.get(0) instanceof ArchitectureSolution) {
                 ((List<ArchitectureSolution>) list).sort(Comparator.comparing(ArchitectureSolution::getName));
                 for (ArchitectureSolution arch : (List<ArchitectureSolution>) list) {
-                    if (root.getChildren().stream().anyMatch(r -> ((ArchitectureSolution) r.getData()).getName().equals(arch.getName()))) {
-                        TreeNode<ArchitectureSolution> rootAux = (TreeNode<ArchitectureSolution>) root.getChildren().stream().filter(treeNode -> ((ArchitectureSolution) treeNode.getData()).getName().equals(arch.getName())).findFirst().get();
-                        buildTreeQualityRequirement(arch, rootAux);
-
-                        rootAux.getChildren().forEach(qr -> {
-                            qr.getChildren().forEach(tech -> {
-                                if (tech.getChildren().isEmpty()) {
-                                    tech.addChild(new TreeNode<>(((Technology) tech.getData()).getArchitectureSolution().getIoTDomain()));
-                                }
-                            });
-                        });
-                    } else {
-                        root.addChild(buildTreeArchitectureSolution(arch));
-                    }
+                    root.addChild(buildTreeArchitectureSolution(arch));
                 }
-            } else if (list.getFirst() instanceof QualityRequirement) {
-                List<QualityRequirement> listOrdered = ((List<QualityRequirement>) list).stream().sorted((o1, o2) -> o1.getName().compareTo(o2.getName())).toList();
-                for (QualityRequirement qr : (List<QualityRequirement>) listOrdered) {
-                    if (root.getChildren().stream().anyMatch(qrAux -> ((QualityRequirement) qrAux.getData()).getName().equals(qr.getName()))) {
-                        TreeNode<QualityRequirement> rootAux =
-                                (TreeNode<QualityRequirement>) root.getChildren().stream().filter(treeNode -> ((QualityRequirement) treeNode.getData()).getName().equals(qr.getName())).findFirst().get();
-
-                        TreeNode<Technology> treeNodeTech = new TreeNode<>(qr.getTechnology());
-                        TreeNode<ArchitectureSolution> treeNodeArch = new TreeNode<>(qr.getArchitectureSolution());
-                        TreeNode<IoTDomain> treeNodeDomain = new TreeNode<>(qr.getArchitectureSolution().getIoTDomain());
-                        treeNodeArch.addChild(treeNodeDomain);
-                        treeNodeTech.addChild(treeNodeArch);
-                        rootAux.addChild(treeNodeTech);
-                    } else {
-                        TreeNode<QualityRequirement> treeNodeQr = new TreeNode<>(qr);
-                        TreeNode<Technology> treeNodeTech = new TreeNode<>(qr.getTechnology());
-                        TreeNode<ArchitectureSolution> treeNodeArch = new TreeNode<>(qr.getArchitectureSolution());
-                        TreeNode<IoTDomain> treeNodeDomain = new TreeNode<>(qr.getArchitectureSolution().getIoTDomain());
-                        treeNodeArch.addChild(treeNodeDomain);
-                        treeNodeTech.addChild(treeNodeArch);
-                        treeNodeQr.addChild(treeNodeTech);
-
-                        root.addChild(treeNodeQr);
-
-                    }
+            } else if (list.get(0) instanceof QualityRequirement) {
+                List<QualityRequirement> listOrdered = ((List<QualityRequirement>) list).stream().sorted(Comparator.comparing(QualityRequirement::getName)).toList();
+                for (QualityRequirement qr : listOrdered) {
+                    root.addChild(buildTreeQualityRequirement(qr));
                 }
             }
         }
-
         return root;
     }
 
     private TreeNode<IoTDomain> buildTreeIoTDomain(IoTDomain domain) {
         TreeNode<IoTDomain> domainNode = new TreeNode<>(domain);
 
-        List<ArchitectureSolution> archsSorted = domain.getArchs();
+        List<ArchitectureSolution> archsSorted = domain.getArchitectureSolutions();
         archsSorted.sort(Comparator.comparing(ArchitectureSolution::getName));
 
         for (ArchitectureSolution solution : archsSorted) {
-            if (domainNode.getChildren().stream().anyMatch(arc -> ((ArchitectureSolution)arc.getData()).getName().equals(solution.getName()))) {
-                TreeNode<ArchitectureSolution> rootAux = (TreeNode<ArchitectureSolution>) domainNode.getChildren().stream().filter(
-                        treeNode -> ((ArchitectureSolution) treeNode.getData()).getName().equals(solution.getName())).findFirst().get();
-
-                buildTreeQualityRequirement(solution, rootAux);
-            } else {
-                TreeNode<ArchitectureSolution> solutionNode = new TreeNode<>(solution);
-                domainNode.addChild(solutionNode);
-                buildTreeQualityRequirement(solution, solutionNode);
-            }
+            TreeNode<ArchitectureSolution> solutionNode = new TreeNode<>(solution);
+            buildTreeQualityRequirement(solution, solutionNode);
+            domainNode.addChild(solutionNode);
         }
 
         return domainNode;
     }
 
-//    public TreeNode<Object> buildTreeIoTDomain(List<IoTDomain> domains) {
-//        TreeNode<Object> root = getRootTreeNode();
-//
-//        for (IoTDomain domain : domains) {
-//            root.addChild(buildTreeIoTDomain(domain));
-//        }
-//
-//        return root;
-//    }
-
     private TreeNode<ArchitectureSolution> buildTreeArchitectureSolution(ArchitectureSolution arch) {
         TreeNode<ArchitectureSolution> archNode = new TreeNode<>(arch);
-
         buildTreeQualityRequirement(arch, archNode);
-
-        archNode.getChildren().forEach(qr -> {
-            qr.getChildren().forEach(tech -> {
-                tech.addChild(new TreeNode<>(((Technology)tech.getData()).getArchitectureSolution().getIoTDomain()));
-            });
-        });
-
         return archNode;
     }
 
+    private TreeNode<QualityRequirement> buildTreeQualityRequirement(QualityRequirement qr) {
+        TreeNode<QualityRequirement> qrNode = new TreeNode<>(qr);
+        for (Technology tech : qr.getTechnologies()) {
+            buildTreeTechnology(tech, qrNode);
+        }
+        return qrNode;
+    }
+
     private void buildTreeQualityRequirement(ArchitectureSolution arch, TreeNode<ArchitectureSolution> archNode) {
-        List<QualityRequirement> list = new java.util.ArrayList<>(arch.getQrs().stream().toList());
+        List<QualityRequirement> list = new ArrayList<>(arch.getQualityRequirements());
         list.sort(Comparator.comparing(QualityRequirement::getName));
+
         for (QualityRequirement qr : list) {
-            if (archNode.getChildren().stream().anyMatch(q -> ((QualityRequirement) q.getData()).getName().equals(qr.getName()))) {
-                TreeNode<QualityRequirement> qrNodeAux = (TreeNode<QualityRequirement>) archNode.getChildren().stream().filter(treeNode -> ((QualityRequirement) treeNode.getData()).getName().equals(qr.getName())).findFirst().get();
-                buildTreeTechnology(qr.getTechnology(), qrNodeAux);
-            } else {
-                TreeNode<QualityRequirement> qrNode = new TreeNode<>(qr);
-                buildTreeTechnology(qr.getTechnology(), qrNode);
-                archNode.addChild(qrNode);
+            TreeNode<QualityRequirement> qrNode = archNode.getChildren().stream()
+                    .filter(treeNode -> treeNode.getData() instanceof QualityRequirement)
+                    .map(treeNode -> (TreeNode<QualityRequirement>) treeNode)
+                    .filter(treeNode -> treeNode.getData().getName().equals(qr.getName()))
+                    .findFirst()
+                    .orElseGet(() -> {
+                        TreeNode<QualityRequirement> newQrNode = new TreeNode<>(qr);
+                        archNode.addChild(newQrNode);
+                        return newQrNode;
+                    });
+
+            for (Technology tech : qr.getTechnologies()) {
+                buildTreeTechnology(tech, qrNode);
             }
         }
     }
 
     private void buildTreeTechnology(Technology tech, TreeNode<QualityRequirement> qrNode) {
-        if (tech !=null) {
+        if (tech != null) {
             TreeNode<Technology> techNode = new TreeNode<>(tech);
             qrNode.addChild(techNode);
         }
     }
-
-//    public TreeNode<Object> buildTreeArchitectureSolution(List<ArchitectureSolution> archs) {
-//        TreeNode<Object> root = getRootTreeNode();
-//
-//        for (ArchitectureSolution arch : archs) {
-//            if (root.getChildren().stream().anyMatch(r -> ((ArchitectureSolution) r.getData()).getName().equals(arch.getName()))) {
-//                TreeNode<ArchitectureSolution> rootAux = (TreeNode<ArchitectureSolution>) root.getChildren().stream().filter(treeNode -> ((ArchitectureSolution) treeNode.getData()).getName().equals(arch.getName())).findFirst().get();
-//                buildTreeQualityRequirement(arch, rootAux);
-//            } else {
-//                root.addChild(buildTreeArchitectureSolution(arch));
-//            }
-//        }
-//
-//        return root;
-//    }
 }
+
